--- a/.github/workflows/swing-bot.yml
+++ b/.github/workflows/swing-bot.yml
@@ -1,28 +1,34 @@
-name: Swing Trading Signal Bot
+name: Crypto Trading Bot
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"   # every 1 hour (UTC)
+    - cron: "*/15 * * * *"   # Runs every 15 minutes
+  workflow_dispatch:
+
+# ✅ Prevent overlapping runs
+concurrency:
+  group: crypto-trading-bot
+  cancel-in-progress: true
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install ccxt pandas requests
 
-      - name: Run Swing Trading Bot
+      - name: Run Bot
         run: python bot.py
         
